--- a/Resources/Pages/Company/Index.ru.resx
+++ b/Resources/Pages/Company/Index.ru.resx
@@ -117,7 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Back to list" xml:space="preserve">
+    <value>Вернуться к списку</value>
+  </data>
   <data name="Company" xml:space="preserve">
     <value>Компании</value>
+  </data>
+  <data name="Create" xml:space="preserve">
+    <value>Создать</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Удалить</value>
+  </data>
+  <data name="Details" xml:space="preserve">
+    <value>Подробности</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Редактировать</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>Поиск:</value>
   </data>
 </root>
