--- a/Resources/Pages/Shared/_Layout.en.resx
+++ b/Resources/Pages/Shared/_Layout.en.resx
@@ -117,7 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Change the language" xml:space="preserve">
+    <value>Change the language</value>
+  </data>
+  <data name="Change the subject" xml:space="preserve">
+    <value>Change the subject</value>
+  </data>
   <data name="Company" xml:space="preserve">
     <value>Company</value>
+  </data>
+  <data name="Information" xml:space="preserve">
+    <value>Information</value>
+  </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Privacy Policy</value>
   </data>
 </root>
