--- a/Resources/Pages/Admin/Create.ru.resx
+++ b/Resources/Pages/Admin/Create.ru.resx
@@ -117,7 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Admin" xml:space="preserve">
+    <value>Администратор</value>
+  </data>
+  <data name="Back to List" xml:space="preserve">
+    <value>Вернуться к списку</value>
+  </data>
   <data name="Create" xml:space="preserve">
     <value>Создать</value>
+  </data>
+  <data name="Enter your details" xml:space="preserve">
+    <value>Введите свои данные</value>
+  </data>
+  <data name="First Name" xml:space="preserve">
+    <value>Имя</value>
+  </data>
+  <data name="Hire Date" xml:space="preserve">
+    <value>Дата найма</value>
+  </data>
+  <data name="Last Name" xml:space="preserve">
+    <value>Фамилия</value>
   </data>
 </root>
