--- a/Resources/Pages/Admin/Index.ru.resx
+++ b/Resources/Pages/Admin/Index.ru.resx
@@ -120,4 +120,28 @@
   <data name="Admin" xml:space="preserve">
     <value>Администратор</value>
   </data>
+  <data name="Create New" xml:space="preserve">
+    <value>Создать</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Удалить</value>
+  </data>
+  <data name="Details" xml:space="preserve">
+    <value>Подробности</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Редактировать</value>
+  </data>
+  <data name="First Name" xml:space="preserve">
+    <value>Имя</value>
+  </data>
+  <data name="Hire Date" xml:space="preserve">
+    <value>Дата найма</value>
+  </data>
+  <data name="Last Name" xml:space="preserve">
+    <value>Фамилия</value>
+  </data>
+  <data name="Select" xml:space="preserve">
+    <value>Выбрать</value>
+  </data>
 </root>
