--- a/Resources/Pages/Company/Edit.ru.resx
+++ b/Resources/Pages/Company/Edit.ru.resx
@@ -117,7 +117,73 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Animals" xml:space="preserve">
+    <value>Животные</value>
+  </data>
+  <data name="Back to List" xml:space="preserve">
+    <value>Вернуться к списку</value>
+  </data>
+  <data name="Bonus" xml:space="preserve">
+    <value>Бонус</value>
+  </data>
+  <data name="Choose the topic of your company" xml:space="preserve">
+    <value>Выберите тематику вашей компании</value>
+  </data>
+  <data name="Company" xml:space="preserve">
+    <value>Компанию</value>
+  </data>
+  <data name="Culture" xml:space="preserve">
+    <value>Культура</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>Описание</value>
+  </data>
   <data name="Edit" xml:space="preserve">
     <value>Редактировать</value>
+  </data>
+  <data name="Education" xml:space="preserve">
+    <value>Образование</value>
+  </data>
+  <data name="Enrollment Date" xml:space="preserve">
+    <value>Дата Регистрации</value>
+  </data>
+  <data name="Game" xml:space="preserve">
+    <value>Игра</value>
+  </data>
+  <data name="Human rights" xml:space="preserve">
+    <value>Права человека</value>
+  </data>
+  <data name="Images" xml:space="preserve">
+    <value>Изобраения</value>
+  </data>
+  <data name="Nature" xml:space="preserve">
+    <value>Природа</value>
+  </data>
+  <data name="News" xml:space="preserve">
+    <value>Новости</value>
+  </data>
+  <data name="Other" xml:space="preserve">
+    <value>Другое</value>
+  </data>
+  <data name="Price" xml:space="preserve">
+    <value>Цена</value>
+  </data>
+  <data name="Rating" xml:space="preserve">
+    <value>Рейтинг</value>
+  </data>
+  <data name="Tags" xml:space="preserve">
+    <value>Тэги</value>
+  </data>
+  <data name="Thematics" xml:space="preserve">
+    <value>Тематика</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Название</value>
+  </data>
+  <data name="Topic" xml:space="preserve">
+    <value>Тема</value>
+  </data>
+  <data name="Video" xml:space="preserve">
+    <value>Видео</value>
   </data>
 </root>
