--- a/Resources/Pages/Company/Index.en.resx
+++ b/Resources/Pages/Company/Index.en.resx
@@ -117,7 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Back to list" xml:space="preserve">
+    <value>Back to list</value>
+  </data>
   <data name="Company" xml:space="preserve">
     <value>Company</value>
+  </data>
+  <data name="Create" xml:space="preserve">
+    <value>Create</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="Details" xml:space="preserve">
+    <value>Details</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Edit</value>
+  </data>
+  <data name="Search:" xml:space="preserve">
+    <value>Search:</value>
   </data>
 </root>
