--- a/Resources/Pages/Index.en.resx
+++ b/Resources/Pages/Index.en.resx
@@ -117,7 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Companies with the highest rating" xml:space="preserve">
+    <value>Companies with the highest rating</value>
+  </data>
   <data name="Company" xml:space="preserve">
     <value>Company</value>
+  </data>
+  <data name="News" xml:space="preserve">
+    <value>News</value>
+  </data>
+  <data name="Tags" xml:space="preserve">
+    <value>Tags</value>
+  </data>
+  <data name="Updated the company" xml:space="preserve">
+    <value>Updated the company</value>
   </data>
 </root>
