--- a/Resources/Pages/Index.ru.resx
+++ b/Resources/Pages/Index.ru.resx
@@ -117,7 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Companies with the highest rating" xml:space="preserve">
+    <value>Компании с самым большим рейтингом</value>
+  </data>
   <data name="Company" xml:space="preserve">
     <value>Компании</value>
+  </data>
+  <data name="News" xml:space="preserve">
+    <value>Новости</value>
+  </data>
+  <data name="Tags" xml:space="preserve">
+    <value>Тэги</value>
+  </data>
+  <data name="Updated the company" xml:space="preserve">
+    <value>Обновленные компании</value>
   </data>
 </root>
