--- a/Resources/Pages/Shared/_Layout.ru.resx
+++ b/Resources/Pages/Shared/_Layout.ru.resx
@@ -117,7 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Change the language" xml:space="preserve">
+    <value>Сменить язык</value>
+  </data>
+  <data name="Change the subject" xml:space="preserve">
+    <value>Сменить тему</value>
+  </data>
   <data name="Company" xml:space="preserve">
     <value>Компании</value>
+  </data>
+  <data name="Information" xml:space="preserve">
+    <value>Информация</value>
+  </data>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Конфиденциальность</value>
   </data>
 </root>
