--- a/Resources/Pages/User/Details.ru.resx
+++ b/Resources/Pages/User/Details.ru.resx
@@ -117,7 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Back to List" xml:space="preserve">
+    <value>Вернуться к списку</value>
+  </data>
   <data name="Details" xml:space="preserve">
     <value>Детали</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Редактировать</value>
+  </data>
+  <data name="User" xml:space="preserve">
+    <value>Пользователь</value>
   </data>
 </root>
