--- a/Resources/Pages/Error.en.resx
+++ b/Resources/Pages/Error.en.resx
@@ -117,28 +117,46 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Email" xml:space="preserve">
-    <value>Почта</value>
+  <data name="An error occurred while processing your request." xml:space="preserve">
+    <value>An error occurred while processing your request.</value>
   </data>
-  <data name="Forgot your password?" xml:space="preserve">
-    <value>Забыли свой пароль?</value>
+  <data name="and restarting the app." xml:space="preserve">
+    <value>and restarting the app.</value>
   </data>
-  <data name="Log in" xml:space="preserve">
-    <value>Авторизоваться</value>
+  <data name="ASPNETCORE_ENVIRONMENT" xml:space="preserve">
+    <value>ASPNETCORE_ENVIRONMENT</value>
   </data>
-  <data name="Password" xml:space="preserve">
-    <value>Пароль</value>
+  <data name="Development" xml:space="preserve">
+    <value>Development</value>
   </data>
-  <data name="Register as a new user" xml:space="preserve">
-    <value>Зарегистрируйтесь как новый пользователь</value>
+  <data name="Development Mode" xml:space="preserve">
+    <value>Development Mode</value>
   </data>
-  <data name="Resending the confirmation email" xml:space="preserve">
-    <value>Повторная отправка подтверждения по электронной почте</value>
+  <data name="environment by setting the" xml:space="preserve">
+    <value>environment by setting the</value>
   </data>
-  <data name="Use a local account to log in" xml:space="preserve">
-    <value>Используйте локальную учетную запись для входа в систему</value>
+  <data name="environment displays detailed information about the error that occurred." xml:space="preserve">
+    <value>environment displays detailed information about the error that occurred.</value>
   </data>
-  <data name="Use another service to log in" xml:space="preserve">
-    <value>Используйте другую службу для входа в систему</value>
+  <data name="environment variable to" xml:space="preserve">
+    <value>environment variable to</value>
+  </data>
+  <data name="Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
+  <data name="For local debugging, enable the" xml:space="preserve">
+    <value>For local debugging, enable the</value>
+  </data>
+  <data name="It can result in displaying sensitive information from exceptions to end users." xml:space="preserve">
+    <value>It can result in displaying sensitive information from exceptions to end users. </value>
+  </data>
+  <data name="Request ID:" xml:space="preserve">
+    <value>Request ID:</value>
+  </data>
+  <data name="Swapping to the" xml:space="preserve">
+    <value>Swapping to the</value>
+  </data>
+  <data name="The Development environment shouldn't be enabled for deployed applications." xml:space="preserve">
+    <value>The Development environment shouldn't be enabled for deployed applications.</value>
   </data>
 </root>
