--- a/Resources/Pages/Privacy.ru.resx
+++ b/Resources/Pages/Privacy.ru.resx
@@ -117,28 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Email" xml:space="preserve">
-    <value>Почта</value>
+  <data name="Privacy Policy" xml:space="preserve">
+    <value>Политика Конфиденциальности</value>
   </data>
-  <data name="Forgot your password?" xml:space="preserve">
-    <value>Забыли свой пароль?</value>
-  </data>
-  <data name="Log in" xml:space="preserve">
-    <value>Авторизоваться</value>
-  </data>
-  <data name="Password" xml:space="preserve">
-    <value>Пароль</value>
-  </data>
-  <data name="Register as a new user" xml:space="preserve">
-    <value>Зарегистрируйтесь как новый пользователь</value>
-  </data>
-  <data name="Resending the confirmation email" xml:space="preserve">
-    <value>Повторная отправка подтверждения по электронной почте</value>
-  </data>
-  <data name="Use a local account to log in" xml:space="preserve">
-    <value>Используйте локальную учетную запись для входа в систему</value>
-  </data>
-  <data name="Use another service to log in" xml:space="preserve">
-    <value>Используйте другую службу для входа в систему</value>
+  <data name="Use this page to detail your site's privacy policy." xml:space="preserve">
+    <value>Используйте эту страницу для детализации политики конфиденциальности вашего сайта.</value>
   </data>
 </root>
