--- a/Resources/Pages/Company/Index.ru.resx
+++ b/Resources/Pages/Company/Index.ru.resx
@@ -135,6 +135,12 @@
   <data name="Edit" xml:space="preserve">
     <value>Редактировать</value>
   </data>
+  <data name="Next" xml:space="preserve">
+    <value>Следующий</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Предыдущий</value>
+  </data>
   <data name="Search" xml:space="preserve">
     <value>Поиск:</value>
   </data>
