--- a/Resources/Pages/Company/Index.en.resx
+++ b/Resources/Pages/Company/Index.en.resx
@@ -135,6 +135,12 @@
   <data name="Edit" xml:space="preserve">
     <value>Edit</value>
   </data>
+  <data name="Next" xml:space="preserve">
+    <value>Next</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Previous</value>
+  </data>
   <data name="Search:" xml:space="preserve">
     <value>Search:</value>
   </data>
